# libmodules

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: main.yml
CMake/: CMakeLists.txt
include/libmodules/: emitter.hpp  linked_list.hpp  locable.hpp  lockable.hpp  proxy_receiver.hpp  receiver.hpp  signal.hpp  spy_pointer.hpp  weak_pointer.hpp
test/: emitter_test.cpp  linked_list_test.cpp  proxy_receiver_test.cpp  receiver_test.cpp  spy_pointer_test.cpp  weak_pointer_test.cpp
